phpapache-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-apache
  name: php-apache-service
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: php-apache
  type: ClusterIP
