kubernetes-dashboard-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.org/ssl-backends: "kubernetes-dashboard"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/dashboard)$ $1/ permanent;
      rewrite ^(/phpapache)$ $1/ permanent;
  name: kubernetes-dashboard-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - kubemaster
    secretName: kubernetes-dashboard-ingress-tls
  rules:
  - host: kubemaster
    http:
      paths:
      - path: /dashboard/?(.*)
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
      - path: /phpapache/?(.*)
        backend:
          serviceName: php-apache-service
          servicePort: 80
